# lumen-cut

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build-release.yml
scripts/: package-release.sh
sidecars/asr/: main.py  test_main.py
sidecars/diarize/: main.py  (+1 more)
src/: App.test.tsx  App.tsx  api.ts  asrProviders.ts  fonts.css  i18n.ts  llmProviders.ts  styles.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  doctor.rs  error.rs  lib.rs  main.rs  media.rs  media_url.rs  performance.rs  proc.rs
src-tauri/src/agent/: allocate.rs  bridge.rs  contract.rs  http.rs  lease.rs  mcp.rs  mod.rs  pool.rs  runtime.rs  task.rs
src-tauri/src/asr/: cloud.rs  mod.rs
src-tauri/src/audit/: engine.rs  finish_check.rs  mod.rs
src-tauri/src/data/: activity.rs  audio_mix.rs  broll.rs  chapter.rs  cues.rs  doc.rs  edit.rs  edit_history.rs  export_settings.rs  mod.rs  modelconfig.rs  rebind.rs  reindex.rs  soft_cut.rs  speakers.rs  storage.rs  substyle.rs  subtitle.rs  title.rs  version.rs
src-tauri/src/diarize/: assign.rs  mod.rs
src-tauri/src/export/: ass.rs  fcp.rs  markdown.rs  mod.rs  project.rs  srt_vtt.rs  video.rs
src-tauri/src/pipeline/: align.rs  broll.rs  cleanup.rs  mod.rs  polish.rs  timing.rs  transcribe.rs  translate.rs
src-tauri/tests/: cli_json.rs  cli_workflow.rs
task-specs/: README.md  align.md  broll.md  chapters.md  cleanup.md  polish.md  repunct.md  segment.md  translate.md
(+39 files in other folders)
